unpackaged/main/default/objects/Change_Control_Plan__c/Change_Control_Plan__c.object-meta.xml
<CustomObject>
    <label>Change Control Plan</label>
    <nameField>
        <label>Change Control Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Control Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>