unpackaged/main/default/objects/Change_Control_Plan__c/fields/Change_Control_Plan_Approved__c.field-meta.xml
<CustomField>
        <fullName>Change_Control_Plan_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Control Plan Approved?</label>
        <type>Checkbox</type>
    </CustomField>