unpackaged/main/default/objects/Change_Control_Plan__c/fields/Plan_SME_Approved__c.field-meta.xml
<CustomField>
        <fullName>Plan_SME_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plan SME Approved</label>
        <type>Checkbox</type>
    </CustomField>