unpackaged/main/default/objects/Change_Control_Plan__c/validationRules/Prevent_Change_Control_Plan_Creation.validationRule-meta.xml
<ValidationRule>
        <fullName>Prevent_Change_Control_Plan_Creation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp;  Change_Control__r.Change_Control_Review_Completed__c</errorConditionFormula>
        <errorMessage>No change control plans can be added after Complete Review Change Control.</errorMessage>
    </ValidationRule>